--- a/index.html
+++ b/index.html
@@ -53,7 +53,76 @@
     </header>
 
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">
+                            Personal Info
+                        </h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Stephen Brereton
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Apartment 8, Block 11, Gallery Quay, Dublin 2
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Mobile:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            +35387 259 9406
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            stephennb92@gmail.com
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Github:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            <a href="https://github.com/StephenB92" target="_blank">StephenB92</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
@@ -69,7 +138,8 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
+                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical
+                                    experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -82,7 +152,9 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
+                                    I follow form as well as function. I know that the aesthetics of effective design
+                                    combined with application speed, security and reliability combine to create a great
+                                    user experience.
                                 </p>
                             </div>
                         </div>
@@ -95,7 +167,9 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
+                                    I work quickly and effectively in getting things built and working across the stack.
+                                    I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm
+                                    also a self starter when working solo.
                                 </p>
                             </div>
                         </div>
@@ -103,7 +177,7 @@
                 </div>
             </div>
         </div>
-        
+
     </section>
 
     <footer class="container-fluid">
@@ -130,18 +204,6 @@
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
@@ -150,6 +212,12 @@
                         <a target="_blank" href="#">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://github.com/StephenB92">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                            <span class="sr-only">GitHub</span>
                         </a>
                     </li>
                 </ul>
